# small-async

./: LICENSE  README.md  main.py  pyproject.toml
src/: example.py
src/async_worker/: async_worker.py  example.py
src/small_async/: __init__.py  async_worker.py
tests/async_worker/: test_async_worker.py
